# RV_Formal

./: .gitignore  LICENSE  Makefile  README.md  RVFormal.cabal  cabal.project  gen.sh  ppc_formal.cabal  run-haskell-script.sh  simple.cabal  stack.yaml  testScript.hs
hs/: Bus.hs  Fetch.hs  FetchReq.hs  FetchResp.hs  IOTransactionTypes.hs  Machine.hs  MachineMode.hs  RegFiles.hs  Simulation.hs  Types.hs  Util.hs  VirtualToReal.hs
hs/Decode/: BitpatsToOpcodes.hs  ExtractField.hs  Fields.hs  FormToField.hs  FormToFields.hs  Forms.hs  OpcodeToForm.hs
hs/Peripherals/: Ram.hs  RamConfig.hs  Setup.hs  Teardown.hs  UartCFFI.hs
hs_gen/: explore.ipynb  extract_bitpat_to_haskell.py  extract_opcodes_to_haskell.py  generate_form_variants.py  generate_opcodeToForms.py  instruction_forms.xlsx  isa.csv  isa.py
isa_generator/: extract_bitpat_to_haskell.py  extract_opcodes_to_haskell.py  generate_form_variants.py  isa.xlsx  isa_packed.csv
py/: isa.py
py/gen_hs/: extract_fields.py  extract_opcodes_to_haskell.py  generate_fields.py  generate_form_to_fields.py  generate_forms.py
py/gen_json/: gen_forms_and_field_mappings_json.py
resources/: build_gcc.sh
resources/bare_metal_powerpc64/: Cargo.toml  README.md
resources/bare_metal_powerpc64/.cargo/: config.toml
resources/bare_metal_powerpc64/src/: main.rs
resources/loopback_asm/: Makefile
resources/loopback_c/: Makefile
src/: BitpatsToOpcodes.hs  Decode.hs  ExtractField.hs  Fields.hs  Forms.hs  Machine.hs  Main  Main.hs  OpcodeToForm.hs  Opcodes.hs  RegFiles.hs  Simulation.hs  Types.hs  Util.hs
src/Decode/: BitpatsToOpcodes.hs  OpcodeToForm.hs  Opcodes.hs
tables/: instruction_forms.xlsx  isa.csv
